<resources>
    <!-- app settings -->
    <string name="app_name">Digma Leyes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- layouts app -->
    <string name="action_settings">Configuración</string>
    <string name="email">Correo</string>

    <string name="default_email">Desea que este el siguiente correo sea el defualt</string>
    <string name="ejemplo_email">ejemplo@hotmail.com</string>
    <string name="btn_config_email">Guardar</string>
    <string name="success_save_config_email">La configuración del email se guardó con éxito.</string>
    <string name="error_save_config_email">Debe agregar un email antes de marcar el checkbox.</string>

    <string name="email_to_send">Ingrese el correo al cual se enviará el pdf..</string>

    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>

    <string name="search">Escriba un tag para buscar.. (Ej. Ley)</string>

    <!-- menu items name -->
    <string name="leyes_fundamentales">Leyes Fundamentales</string>
    <string name="leyes">Leyes</string>
    <string name="codigos">Codigos</string>
    <string name="r_leyes">Reglamentos de Leyes</string>
    <string name="r_legislativo">Reglamentos del Poder Legislativo</string>
    <string name="r_judicial">Reglamentos del Poder Judicial</string>
    <string name="r_dependencias">Reglamentos de Dependencias y Organismos</string>

    <!-- server -->
    <string name="url_server">http://digma.mx/congreso/</string>
    <string name="url_send_email">http://digma.mx/congreso/mail.php</string>
    <string name="url_download_pdf">http://digma.mx/congreso/</string>

</resources>
