<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="gone">

    <CheckBox
        android:id="@+id/check_default_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_email"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:layout_margin="15dp"
        />

    <EditText
        android:id="@+id/default_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/ejemplo_email"
        android:textAlignment="center"
        android:padding="15dp"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/btn_config_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_config_email"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        />

</LinearLayout>